--- a/style.css
+++ b/style.css
@@ -5,9 +5,26 @@ header{
 }
 
 h3{
-    padding-top: 20px
+    text-align: center;
+    font-family: 'Unica One', cursive;
+    margin-top: 20px;
+    font-size: 26px
 }
 
 html{
-    background-color: rgb(53,53,53)
+    background-color: rgb(53,53,53);
+    color: whitesmoke
+}
+
+.top{
+    text-align: center;
+    border-image-width: 540px
+}
+
+h2{
+    font-family: 'Unica One', cursive;
+}
+
+.watch_description{
+    font-family: 'Dosis', sans-serif;
 }
